# RUFF-CM

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.py
ruff_cm/: __init__.py  _hashing.py  logger.py  nn_helper.py  plotter.py  slurm.py  stats.py  task_protocol.py  utils.py  wandb_template.py
ruff_cm/experimenter/: __init__.py  cell.py  change_configs.py  create_training_configs.py  sampling.py  test_experimenters.py
ruff_cm/llm/: __init__.py  batch.py  choice.py  execution.py  hooks.py  hooks_runtime.py  locator.py  parsing.py  reasoning.py  spans.py
ruff_cm/llm/backends/: __init__.py  api.py  base.py  hf.py  model_aliases.yml  providers.py  registry.py
ruff_cm/store/: __init__.py  artifact_key.py  bundle.py  cache_metadata.py  prefix_cache.py
tests/: conftest.py  test_plotter.py  test_stats.py  test_task_protocol.py
tests/experimenter/: test_cell.py  test_create_training_configs.py  test_sampling.py
tests/llm/: test_batch.py  test_choice.py  test_execution.py  test_hooks.py  test_hooks_runtime.py  test_locator.py  test_parsing.py  test_reasoning.py  test_spans.py
tests/llm/backends/: test_api.py  test_base.py  test_hf.py  test_providers.py  test_registry.py
tests/parity/: test_choice_number_game.py  test_execution_uncertainty_dynamics.py  test_hidden_uncertainty_dynamics.py  test_prefix_cache_number_game.py  test_thinking_number_game.py
tests/store/: test_artifact_key.py  test_bundle.py  test_cache_metadata.py  test_prefix_cache.py
