[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruff_cm"
version = "0.3.0"
description = "Reusable Utility Functions for Computational Modeling"
authors = [{name = "Hua-Dong Xiong", email = "hdx@arizona.edu"}]
readme = "README.md"
license = {text = "See LICENSE"}
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml", "ruamel.yaml", "submitit"]

[project.optional-dependencies]
llm = ["openai>=1.0", "transformers>=4.40", "torch>=2.0", "tiktoken"]
dev = ["pytest>=7", "pytest-cov", "pytest-mock", "ruff", "openai>=1.0", "transformers>=4.40", "torch>=2.0", "tiktoken"]

[tool.setuptools.packages.find]
include = ["ruff_cm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hf: tests requiring torch and transformers",
    "api: API backend tests using a mocked OpenAI-compatible client",
    "parity: copied tiny parity fixtures from downstream repos",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py310"
